Some style/layout fixes (#177)
* Making community page longer

* Fixing some action page bugs & styling

* Fixing affirmation header sizing on mobile

* Renaming to truncate and updating logic to be safer

* Removing emoji per lukes request

--- a/resources/assets/components/ActionPage/actionPage.scss
+++ b/resources/assets/components/ActionPage/actionPage.scss
@@ -12,6 +12,15 @@
     }
   }
 
+  &.-truncate {
+    overflow-y: hidden;
+    max-height: 600px;
+
+    @include media($medium) {
+      max-height: 400px;
+    }
+  }
+
   h1, h2, h3, p {
     color: $black;
     font-family: $primary-font-family;
